{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 231,
  "lineage": "225ae316-0d3a-1d66-73b8-3b6daca2d242",
  "resources": [
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a47dfffd16947523",
            "association_id": "eipassoc-0797f27284b615763",
            "domain": "vpc",
            "id": "eipalloc-0a47dfffd16947523",
            "network_border_group": "us-east-1",
            "network_interface": "eni-038d95f6a6c5a24e9",
            "private_dns": "ip-10-0-70-0.ec2.internal",
            "private_ip": "10.0.70.0",
            "public_dns": "ec2-54-234-223-118.compute-1.amazonaws.com",
            "public_ip": "54.234.223.118",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:internet-gateway/igw-0728f9422015953bf",
            "id": "igw-0728f9422015953bf",
            "owner_id": "126531806131",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "dependencies": [
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a47dfffd16947523",
            "association_id": "eipassoc-0797f27284b615763",
            "connectivity_type": "public",
            "id": "nat-0ded14d361e756481",
            "network_interface_id": "eni-038d95f6a6c5a24e9",
            "private_ip": "10.0.70.0",
            "public_ip": "54.234.223.118",
            "subnet_id": "subnet-06c387910d20880f9",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.NetWork.aws_eip.nat",
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:route-table/rtb-03407c973e4ed1b1b",
            "id": "rtb-03407c973e4ed1b1b",
            "owner_id": "126531806131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ded14d361e756481",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NetWork.aws_eip.nat",
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_nat_gateway.nat",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:route-table/rtb-0c40834d2e9482527",
            "id": "rtb-0c40834d2e9482527",
            "owner_id": "126531806131",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0728f9422015953bf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d23de351fd004b2e",
            "route_table_id": "rtb-03407c973e4ed1b1b",
            "subnet_id": "subnet-054fa1535f5c5fbd4"
          },
          "dependencies": [
            "module.NetWork.aws_eip.nat",
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_nat_gateway.nat",
            "module.NetWork.aws_route_table.private",
            "module.NetWork.aws_subnet.private",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f7047f98c60c9ea",
            "route_table_id": "rtb-03407c973e4ed1b1b",
            "subnet_id": "subnet-00e237cc33c8bafb0"
          },
          "dependencies": [
            "module.NetWork.aws_eip.nat",
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_nat_gateway.nat",
            "module.NetWork.aws_route_table.private",
            "module.NetWork.aws_subnet.private",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3af5f03ca3f2e01",
            "route_table_id": "rtb-0c40834d2e9482527",
            "subnet_id": "subnet-06c387910d20880f9"
          },
          "dependencies": [
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_route_table.public",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d508a634d955227",
            "route_table_id": "rtb-0c40834d2e9482527",
            "subnet_id": "subnet-038f3288022b86ad4"
          },
          "dependencies": [
            "module.NetWork.aws_internet_gateway.igw",
            "module.NetWork.aws_route_table.public",
            "module.NetWork.aws_subnet.public",
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:subnet/subnet-054fa1535f5c5fbd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054fa1535f5c5fbd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126531806131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "dependencies": [
            "module.NetWork.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:subnet/subnet-00e237cc33c8bafb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e237cc33c8bafb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126531806131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "dependencies": [
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:subnet/subnet-06c387910d20880f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c387910d20880f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126531806131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "dependencies": [
            "module.NetWork.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:subnet/subnet-038f3288022b86ad4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f3288022b86ad4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126531806131",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/eks-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-04e735ac8ac2c2e96"
          },
          "dependencies": [
            "module.NetWork.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.NetWork",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126531806131:vpc/vpc-04e735ac8ac2c2e96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08140028985fdaa9a",
            "default_route_table_id": "rtb-010f7bf53c6b5b2bb",
            "default_security_group_id": "sg-0fa1da801879e91f1",
            "dhcp_options_id": "dopt-cfd0aeb4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04e735ac8ac2c2e96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-010f7bf53c6b5b2bb",
            "owner_id": "126531806131",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}